--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,45 @@
-# Compiled class file
+# General files
+HELP.md
+
+# Maven-specific
+target/
+!.mvn/wrapper/maven-wrapper.jar
+.mvn/  # Ignore the .mvn folder
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+# Spring Tools Suite (STS)
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+# IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+
+# NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+/build/ 
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+# VS Code
+.vscode/
+
+# Compiled class files
 *.class
 
-# Log file
+# Log files
 *.log
 
 # BlueJ files
@@ -10,7 +48,7 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files (JAR, WAR, etc.)
 *.jar
 *.war
 *.nar
@@ -19,6 +57,6 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# Virtual machine crash logs
 hs_err_pid*
 replay_pid*
